pipreqs and nbconvert

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,12 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm.notebook import tqdm\n",
-    "import requests\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,13 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af003fc24efc4119a9100fe7066fdf98",
+       "model_id": "0da1e5a3449e40baafd512b7bf4f6f10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,8 +90,9 @@
     "        df = pd.read_json(file_path)\n",
     "        data[interval] = df\n",
     "    else:\n",
-    "        df, _ = ts.get_intraday(symbol='SPY', interval=interval, outputsize='full')\n",
-    "        df.rename(columns={'4. close': 'p', '5. volume': 'v'}, inplace =True)\n",
+    "        df, _ = ts.get_intraday(\n",
+    "            symbol='SPY', interval=interval, outputsize='full')\n",
+    "        df.rename(columns={'4. close': 'p', '5. volume': 'v'}, inplace=True)\n",
     "        data[interval] = df[['p', 'v']]\n",
     "\n",
     "        # Cache it\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,14 +131,14 @@
     "normalized_data = {}\n",
     "for interval, df in data.items():\n",
     "    normalized_data[interval] = df.pct_change().dropna()\n",
-    "    \n",
+    "\n",
     "price_changes_df = pd.DataFrame(columns=INTERVALS)\n",
     "volume_changes_df = pd.DataFrame(columns=INTERVALS)\n",
     "# Loop through each interval and combine the price and volume changes\n",
     "for interval, df in normalized_data.items():\n",
     "    price_changes_dfs = df['p']\n",
     "    volume_changes_dfs = df['v']\n",
-    "    \n",
+    "\n",
     "    price_changes_df[interval] = price_changes_dfs\n",
     "    volume_changes_df[interval] = volume_changes_dfs\n",
     "\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        " 1.0322519716956044e-05]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,13 +188,13 @@
     "for interval, df in normalized_data.items():\n",
     "    acf_vals = [df['p'].autocorr(lag=lag) for lag in lags]\n",
     "    auto_correlations[interval] = acf_vals\n",
-    "    \n",
+    "\n",
     "auto_correlations[\"1min\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
     "plt.title('Auto-Correlation Analysis for Different Intervals')\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -254,11 +254,13 @@
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12, 6))\n",
     "\n",
     "# Plot the heatmap for price changes correlation\n",
-    "sns.heatmap(price_changes_df.corr(), annot=True, cmap='coolwarm', center=0, ax=axes[0])\n",
+    "sns.heatmap(price_changes_df.corr(), annot=True,\n",
+    "            cmap='coolwarm', center=0, ax=axes[0])\n",
     "axes[0].set_title('Correlation of Price Changes')\n",
     "\n",
     "# Plot the heatmap for volume changes correlation\n",
-    "sns.heatmap(volume_changes_df.corr(), annot=True, cmap='coolwarm', center=0, ax=axes[1])\n",
+    "sns.heatmap(volume_changes_df.corr(), annot=True,\n",
+    "            cmap='coolwarm', center=0, ax=axes[1])\n",
     "axes[1].set_title('Correlation of Volume Changes')\n",
     "\n",
     "plt.tight_layout()\n",
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,23 +326,26 @@
     "# Loop through each interval and calculate the correlation with other intervals\n",
     "for price_interval in price_changes_df.columns:\n",
     "    for volume_interval in volume_changes_df.columns:\n",
-    "        correlation = price_changes_df[price_interval].corr(volume_changes_df[volume_interval])\n",
-    "        correlation_intervals.loc[price_interval, volume_interval] = correlation\n",
+    "        correlation = price_changes_df[price_interval].corr(\n",
+    "            volume_changes_df[volume_interval])\n",
+    "        correlation_intervals.loc[price_interval,\n",
+    "                                  volume_interval] = correlation\n",
     "\n",
     "# Create a heatmap to visualize the correlations between price changes and volume changes in different intervals\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(correlation_intervals, annot=True, cmap='coolwarm', center=0)\n",
-    "plt.title('Correlation between Price Changes and Volume Changes in Different Intervals')\n",
+    "plt.title(\n",
+    "    'Correlation between Price Changes and Volume Changes in Different Intervals')\n",
     "plt.xlabel('Volume Interval')\n",
     "plt.ylabel('Price Interval')\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -363,19 +368,23 @@
     "# Loop through each interval and calculate the correlation with lagged volume changes in other intervals\n",
     "for price_interval in price_changes_df.columns:\n",
     "    for lagged_volume_interval in volume_changes_df.columns:\n",
-    "        lagged_volume_changes = volume_changes_df[lagged_volume_interval].shift(1)  # Lag volume changes\n",
-    "        correlation = price_changes_df[price_interval].corr(lagged_volume_changes)\n",
-    "        correlation_intervals.loc[price_interval, lagged_volume_interval] = correlation\n",
+    "        lagged_volume_changes = volume_changes_df[lagged_volume_interval].shift(\n",
+    "            1)  # Lag volume changes\n",
+    "        correlation = price_changes_df[price_interval].corr(\n",
+    "            lagged_volume_changes)\n",
+    "        correlation_intervals.loc[price_interval,\n",
+    "                                  lagged_volume_interval] = correlation\n",
     "\n",
     "# Create a heatmap to visualize the correlations between price changes and lagged volume changes in different intervals\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(correlation_intervals, annot=True, cmap='coolwarm', center=0)\n",
-    "plt.title('Correlation between Price Changes and Lagged Volume Changes in Different Intervals')\n",
+    "plt.title(\n",
+    "    'Correlation between Price Changes and Lagged Volume Changes in Different Intervals')\n",
     "plt.xlabel('Lagged Volume Interval')\n",
     "plt.ylabel('Price Interval')\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
